프로필 - 유저정보 모달 추가

--- a/_right_area.html
+++ b/_right_area.html
@@ -117,7 +117,7 @@
             <div class="chat_list h-full">
                 <!-- 일반채팅 -->
                 <div class="relative flex gap-3 items-start p-2">
-                    <div class="relative">
+                    <div class="relative cursor-pointer" data-tw-toggle="modal" data-tw-target="#profile_info-modal">
                         <img class="w-10 h-10 rounded-full" src="./dist/custom_img/profile_img.png">
                         <p class="relative -mt-1 rounded text-center text-stand font-extrabold text-xs py-0.5 text-black" style="background-color:rgb(224, 154, 106)">V4</p>
                     </div>
@@ -131,7 +131,7 @@
                     </div>
                 </div>
                 <div class="relative flex gap-3 items-start p-2">
-                    <div class="relative">
+                    <div class="relative cursor-pointer" data-tw-toggle="modal" data-tw-target="#profile_info-modal">
                         <img class="w-10 h-10 rounded-full" src="./dist/custom_img/profile_img.png">
                         <p class="relative -mt-1 rounded text-center font-extrabold text-xs py-0.5 text-black" style="background-color:rgb(225, 225, 225)">V8</p>
                     </div>
@@ -145,7 +145,7 @@
                     </div>
                 </div>
                 <div class="relative flex gap-3 items-start p-2">
-                    <div class="relative">
+                    <div class="relative cursor-pointer" data-tw-toggle="modal" data-tw-target="#profile_info-modal">
                         <img class="w-10 h-10 rounded-full" src="./dist/custom_img/profile_img2.png">
                         <p class="relative -mt-1 rounded text-center font-extrabold text-xs py-0.5 text-black" style="background-color:rgb(255, 195, 41)">V24</p>
                     </div>
@@ -159,7 +159,7 @@
                     </div>
                 </div>
                 <div class="relative flex gap-3 items-start p-2">
-                    <div class="relative">
+                    <div class="relative cursor-pointer" data-tw-toggle="modal" data-tw-target="#profile_info-modal">
                         <img class="w-10 h-10 rounded-full" src="./dist/custom_img/profile_img2.png">
                         <p class="relative -mt-1 rounded text-center font-extrabold text-xs py-0.5 text-black" style="background-color:rgb(157, 99, 246)">V46</p>
                     </div>
@@ -173,7 +173,7 @@
                     </div>
                 </div>
                 <div class="relative flex gap-3 items-start p-2">
-                    <div class="relative">
+                    <div class="relative cursor-pointer" data-tw-toggle="modal" data-tw-target="#profile_info-modal">
                         <img class="w-10 h-10 rounded-full" src="./dist/custom_img/profile_img2.png">
                         <p class="relative -mt-1 rounded text-center font-extrabold text-xs py-0.5 text-black" style="background-color:rgb(244, 80, 169)">SV3</p>
                     </div>
@@ -218,7 +218,7 @@
                     </div>
                 </div>
                 <div class="relative flex gap-3 items-start p-2">
-                    <div class="relative">
+                    <div class="relative cursor-pointer" data-tw-toggle="modal" data-tw-target="#profile_info-modal">
                         <img class="w-10 h-10 rounded-full" src="./dist/custom_img/profile_img3.png">
                         <p class="relative -mt-1 rounded text-center text-stand font-extrabold text-xs py-0.5 text-black" style="background-color:rgb(177, 202, 235)">V1</p>
                     </div>
@@ -232,15 +232,15 @@
                             <a href="javascript:;" class="text-tit font-extrabold">Wjyaabkyyoyb</a> 비가 와서 메시지를 남겼습니다: "비다! 오늘 저녁은 치킨이 닭!"
                             <div class="bg-back2 p-2 py-4 mt-2">
                                 <div class="flex justify-between p-0.5">
-                                    <a href="javascript:;" class="text-primary font-extrabold">@Mrs Stone_heart</a> 
+                                    <a href="javascript:;" class="text-primary font-extrabold cursor-pointer" data-tw-toggle="modal" data-tw-target="#profile_info-modal">@Mrs Stone_heart</a> 
                                     <span class="flex items-center gap-1 text-tit font-extrabold">₩ 429.20 <img class="w-4 h-4" src="./dist/custom_img/coin/BCD.webp"></span>
                                 </div>
                                 <div class="flex justify-between p-0.5">
-                                    <a href="javascript:;" class="text-primary font-extrabold">@Tazzi90</a> 
+                                    <a href="javascript:;" class="text-primary font-extrabold cursor-pointer" data-tw-toggle="modal" data-tw-target="#profile_info-modal">@Tazzi90</a> 
                                     <span class="flex items-center gap-1 text-tit font-extrabold">₩ 429.20 <img class="w-4 h-4" src="./dist/custom_img/coin/BCD.webp"></span>
                                 </div>
                                 <div class="flex justify-between p-0.5">
-                                    <a href="javascript:;" class="text-primary font-extrabold">@JoeBeaten</a> 
+                                    <a href="javascript:;" class="text-primary font-extrabold cursor-pointer" data-tw-toggle="modal" data-tw-target="#profile_info-modal">@JoeBeaten</a> 
                                     <span class="flex items-center gap-1 text-tit font-extrabold">₩ 429.20 <img class="w-4 h-4" src="./dist/custom_img/coin/BCD.webp"></span>
                                 </div>
                             </div>
@@ -275,23 +275,23 @@
                                 </div>
                                 <div class="flex items-center justify-center gap-1 mb-2 text-center text-sky-400"><img class="w-4" src="./dist/custom_img/rain_icon.png" alt="">행운의 비가 내립니다!<img class="w-4" src="./dist/custom_img/rain_icon.png" alt=""></div>
                                 <div class="flex justify-between p-0.5">
-                                    <a href="javascript:;" class="text-primary font-extrabold">@Mrs Stone_heart</a> 
+                                    <a href="javascript:;" class="text-primary font-extrabold cursor-pointer" data-tw-toggle="modal" data-tw-target="#profile_info-modal">@Mrs Stone_heart</a> 
                                     <span class="flex items-center gap-1 text-tit font-extrabold">₩ 3,226.55 <img class="w-4 h-4" src="./dist/custom_img/coin/BCD.webp"></span>
                                 </div>
                                 <div class="flex justify-between p-0.5">
-                                    <a href="javascript:;" class="text-primary font-extrabold">@Tazzi90</a> 
+                                    <a href="javascript:;" class="text-primary font-extrabold cursor-pointer" data-tw-toggle="modal" data-tw-target="#profile_info-modal">@Tazzi90</a> 
                                     <span class="flex items-center gap-1 text-tit font-extrabold">₩ 3,226.55 <img class="w-4 h-4" src="./dist/custom_img/coin/BCD.webp"></span>
                                 </div>
                                 <div class="flex justify-between p-0.5">
-                                    <a href="javascript:;" class="text-primary font-extrabold">@JoeBeaten</a> 
+                                    <a href="javascript:;" class="text-primary font-extrabold cursor-pointer" data-tw-toggle="modal" data-tw-target="#profile_info-modal">@JoeBeaten</a> 
                                     <span class="flex items-center gap-1 text-tit font-extrabold">₩ 3,226.55 <img class="w-4 h-4" src="./dist/custom_img/coin/BCD.webp"></span>
                                 </div>
                                 <div class="flex justify-between p-0.5">
-                                    <a href="javascript:;" class="text-primary font-extrabold">@Liz497</a> 
+                                    <a href="javascript:;" class="text-primary font-extrabold cursor-pointer" data-tw-toggle="modal" data-tw-target="#profile_info-modal">@Liz497</a> 
                                     <span class="flex items-center gap-1 text-tit font-extrabold">₩ 3,226.55 <img class="w-4 h-4" src="./dist/custom_img/coin/IDR.webp"></span>
                                 </div>
                                 <div class="flex justify-between p-0.5">
-                                    <a href="javascript:;" class="text-primary font-extrabold">@6439</a> 
+                                    <a href="javascript:;" class="text-primary font-extrabold cursor-pointer" data-tw-toggle="modal" data-tw-target="#profile_info-modal">@6439</a> 
                                     <span class="flex items-center gap-1 text-tit font-extrabold">₩ 3,226.55 <img class="w-4 h-4" src="./dist/custom_img/coin/UAH.webp"></span>
                                 </div>
                                 <button class="btn w-full h-8 flex px-2 mt-2 items-center justify-between border-none bg-back">
@@ -307,7 +307,7 @@
                     </div>
                 </div>
                 <div class="relative flex gap-3 items-start p-2">
-                    <div class="relative">
+                    <div class="relative cursor-pointer" data-tw-toggle="modal" data-tw-target="#profile_info-modal">
                         <img class="w-10 h-10 rounded-full" src="./dist/custom_img/profile_img2.png">
                         <p class="relative -mt-1 rounded text-center font-extrabold text-xs py-0.5 text-black" style="background-color:rgb(255, 195, 41)">V22</p>
                     </div>
