--- a/_right_area.html
+++ b/_right_area.html
@@ -109,7 +109,7 @@
         <div class="top_box h-16 p-5 flex items-center justify-between bg-shadow">
             <h3 class="text-base font-semibold text-tit">채팅</h3>
             <div class="flex items-center gap-4">
-                <button class="basic-hover"><svg class="w-6 h-6 fill-basic"><use xlink:href="./dist/custom_img/symbol-defs.svg#icon_Inform"></use></svg></button>
+                <button class="basic-hover" data-tw-toggle="modal" data-tw-target="#chat_info-modal"><svg class="w-6 h-6 fill-basic"><use xlink:href="./dist/custom_img/symbol-defs.svg#icon_Inform"></use></svg></button>
                 <button class="basic-hover"><svg class="w-5 h-5 fill-basic hover:-rotate-90 transition-all duration-500" onclick="rightOpen('close')"><use xlink:href="./dist/custom_img/symbol-defs.svg#icon_Close"></use></svg></button>
             </div>
         </div>
@@ -127,7 +127,8 @@
                             <button class="basic-hover"><svg class="w-5 h-5"><use xlink:href="./dist/custom_img/symbol-defs.svg#icon_Tip"></use></svg></button>
                             <button class="basic-hover" onclick="chatInput('@Zfhdvirdhob ')"><svg class="w-5 h-5"><use xlink:href="./dist/custom_img/symbol-defs.svg#icon_At"></use></svg></button>
                         </div>
-                        <div class="inline-flex p-2 bg-back rounded mt-1"><img src="./dist/custom_img/chat_gif.gif" alt=""></div>
+                        <!-- 메세지영역 -->
+                        <div class="inline-flex p-3 bg-back rounded mt-1"><img src="./dist/custom_img/chat_gif.gif" alt=""></div>
                     </div>
                 </div>
                 <div class="relative flex gap-3 items-start p-2">
@@ -141,7 +142,8 @@
                             <button class="basic-hover"><svg class="w-5 h-5"><use xlink:href="./dist/custom_img/symbol-defs.svg#icon_Tip"></use></svg></button>
                             <button class="basic-hover" onclick="chatInput('@As_ ')"><svg class="w-5 h-5"><use xlink:href="./dist/custom_img/symbol-defs.svg#icon_At"></use></svg></button>
                         </div>
-                        <div class="inline-flex p-2 bg-back rounded mt-1">goodluck all</div>
+                        <!-- 메세지영역 -->
+                        <div class="inline-flex p-3 bg-back rounded mt-1">goodluck all</div>
                     </div>
                 </div>
                 <div class="relative flex gap-3 items-start p-2">
@@ -155,7 +157,8 @@
                             <button class="basic-hover"><svg class="w-5 h-5"><use xlink:href="./dist/custom_img/symbol-defs.svg#icon_Tip"></use></svg></button>
                             <button class="basic-hover" onclick="chatInput('@LOGANthisis ')"><svg class="w-5 h-5"><use xlink:href="./dist/custom_img/symbol-defs.svg#icon_At"></use></svg></button>
                         </div>
-                        <div class="inline-flex p-2 bg-back rounded mt-1"><a href="javascript:;" class="text-primary" onclick="chatInput('@🦆RomanSh ')">@🦆RomanSh</a> bad luck</div>
+                        <!-- 메세지영역 -->
+                        <div class="inline-flex p-3 bg-back rounded mt-1"><a href="javascript:;" class="text-primary" onclick="chatInput('@🦆RomanSh ')">@🦆RomanSh</a> bad luck</div>
                     </div>
                 </div>
                 <div class="relative flex gap-3 items-start p-2">
@@ -169,7 +172,8 @@
                             <button class="basic-hover"><svg class="w-5 h-5"><use xlink:href="./dist/custom_img/symbol-defs.svg#icon_Tip"></use></svg></button>
                             <button class="basic-hover" onclick="chatInput('@AiueoA ')"><svg class="w-5 h-5"><use xlink:href="./dist/custom_img/symbol-defs.svg#icon_At"></use></svg></button>
                         </div>
-                        <div class="inline-flex p-2 bg-back rounded mt-1">😍Awesome played all lucky players ☠️🔖</div>
+                        <!-- 메세지영역 -->
+                        <div class="inline-flex p-3 bg-back rounded mt-1">😍Awesome played all lucky players ☠️🔖</div>
                     </div>
                 </div>
                 <div class="relative flex gap-3 items-start p-2">
@@ -183,15 +187,19 @@
                             <button class="basic-hover"><svg class="w-5 h-5"><use xlink:href="./dist/custom_img/symbol-defs.svg#icon_Tip"></use></svg></button>
                             <button class="basic-hover" onclick="chatInput('@N7 ')"><svg class="w-5 h-5"><use xlink:href="./dist/custom_img/symbol-defs.svg#icon_At"></use></svg></button>
                         </div>
-                        <div class="inline-flex p-2 bg-back rounded mt-1">Ok see u</div>
+                        <!-- 메세지영역 -->
+                        <div class="inline-flex p-3 bg-back rounded mt-1">Ok see u</div>
                     </div>
                 </div>
+
+                <!-- 주간추첨 / 복권잭팟 -->
                 <div class="relative flex gap-3 items-start p-2">
                     <div class="relative">
                         <img class="w-10 h-10 rounded-full" src="./dist/custom_img/profile_img3.png">
                     </div>
                     <div class="hover_box">
                         <p class="text-xs text-place"><b class="text-sm mr-1 text-sub cursor-pointer">BC <svg class="w-4 h-4 inline-flex fill-blue-500"><use xlink:href="./dist/custom_img/symbol-defs.svg#icon_Official"></use></svg></b> 09:12</p>
+                        <!-- 복권추첨 메세지 -->
                         <div class="p-3 bg-back rounded mt-1">
                             <div class="flex w-full chat_ticket p-3 gap-2 rounded">
                                 <i class="w-10 h-10 rounded-full bg-back"><img src="./dist/custom_img/chat_ticket.webp" alt=""></i>
@@ -202,6 +210,7 @@
                             </div>
                             <button class="btn btn-yellow mt-3 font-extrabold px-4 rounded">티켓 확인하기</button>
                         </div>
+                        <!-- 복권 잭팟 메세지 -->
                         <div class="p-3 bg-back rounded mt-2">
                             <div class="w-full chat_ticket02 p-3 rounded">
                                 <div class="flex gap-2">
@@ -228,6 +237,7 @@
                             <button class="basic-hover"><svg class="w-5 h-5"><use xlink:href="./dist/custom_img/symbol-defs.svg#icon_Tip"></use></svg></button>
                             <button class="basic-hover" onclick="chatInput('@Wjyaabkyyoyb ')"><svg class="w-5 h-5"><use xlink:href="./dist/custom_img/symbol-defs.svg#icon_At"></use></svg></button>
                         </div>
+                        <!-- 메세지영역 -->
                         <div class="p-3 bg-back rounded mt-1">
                             <a href="javascript:;" class="text-tit font-extrabold">Wjyaabkyyoyb</a> 비가 와서 메시지를 남겼습니다: "비다! 오늘 저녁은 치킨이 닭!"
                             <div class="bg-back2 p-2 py-4 mt-2">
@@ -306,6 +316,8 @@
                         </div>
                     </div>
                 </div>
+
+                <!-- 멋진순간 메세지 -->
                 <div class="relative flex gap-3 items-start p-2">
                     <div class="relative cursor-pointer" data-tw-toggle="modal" data-tw-target="#profile_info-modal">
                         <img class="w-10 h-10 rounded-full" src="./dist/custom_img/profile_img2.png">
@@ -317,7 +329,8 @@
                             <button class="basic-hover"><svg class="w-5 h-5"><use xlink:href="./dist/custom_img/symbol-defs.svg#icon_Tip"></use></svg></button>
                             <button class="basic-hover" onclick="chatInput('@LOGANthisis ')"><svg class="w-5 h-5"><use xlink:href="./dist/custom_img/symbol-defs.svg#icon_At"></use></svg></button>
                         </div>
-                        <div class="p-2 bg-back rounded mt-1">
+                        <!-- 메세지영역 -->
+                        <div class="p-3 bg-back rounded mt-1">
                             I'm lucky today!
                             <div class="game-share-base p-2 py-3 mt-1">
                                 <div class="flex items-center gap-2">
@@ -347,6 +360,32 @@
                                     공유
                                 </button>
                             </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!--  -->
+                <div class="relative flex gap-3 items-start p-2">
+                    <div class="relative cursor-pointer" data-tw-toggle="modal" data-tw-target="#profile_info-modal">
+                        <img class="w-10 h-10 rounded-full" src="./dist/custom_img/profile_img2.png">
+                        <p class="relative -mt-1 rounded text-center font-extrabold text-xs py-0.5 text-black" style="background-color:rgb(244, 80, 169)">SV3</p>
+                    </div>
+                    <div class="hover_box">
+                        <p class="text-xs text-place"><b class="text-sm mr-1 text-sub cursor-pointer">N7</b> 09:12</p>
+                        <div class="absolute right-4 top-3 flex gap-4 btn_box opacity-0">
+                            <button class="basic-hover"><svg class="w-5 h-5"><use xlink:href="./dist/custom_img/symbol-defs.svg#icon_Tip"></use></svg></button>
+                            <button class="basic-hover" onclick="chatInput('@N7 ')"><svg class="w-5 h-5"><use xlink:href="./dist/custom_img/symbol-defs.svg#icon_At"></use></svg></button>
+                        </div>
+                        <!-- 메세지영역 -->
+                        <div class="p-3 bg-back rounded mt-1">
+                            <div class="bg-back2 flex items-center p-3">
+                                <img class="flex-shrink-0 w-14" src="./dist/custom_img/super_share.png" alt="">
+                                <div class="flex-1">
+                                    <p class="text-tit font-bold text-xs mb-1">내 스핀 보너스 확인!</p>
+                                    <div class="bg-back text-primary p-1 text-center font-bold rounded">+₩ 2,589.00 <img class="inline-flex w-4" src="./dist/custom_img/coin/TRX.webp" alt=""></div>
+                                </div>
+                            </div>
+                            <button class="btn btn-yellow mt-3 font-extrabold px-4 rounded">스핀 돌리기!</button>
                         </div>
                     </div>
                 </div>
@@ -461,3 +500,44 @@
     </div>
 
 </div>
+
+
+
+<!-- 공통 모달 영역 : S -->
+
+<!-- 채팅규칙 모달 -->
+<div id="chat_info-modal" class="modal mo_full" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-body bg-modaldark relative rounded">
+                <div class="relative flex items-center justify-between p-4">
+                    <p class="text-tit font-extrabold text-base">채팅규칙</p>
+                    
+                    <button class="basic-hover" data-tw-dismiss="modal"><svg class="w-4 h-4 close_btn cursor-pointer hover:-rotate-90 duration-500 transition-all"><use xlink:href="./dist/custom_img/symbol-defs.svg#icon_Close"></use></svg></button>
+                </div>
+
+                <div class="p-6 font-semibold">
+                    <p class="">1. 스팸을 보내거나 괴롭히거나 다른 사용자에게 불쾌감을 주지 마십시오!</p>
+
+                    <p class="mt-3">2. 대출, 비, 팁 및 두 배로 동전을 구걸하거나 요구하지 마십시오.</p>
+
+                    <p class="mt-3">3. 잠재적인 사기로 볼 수 있는 의심스러운 행동을 하지 않습니다.</p>
+
+                    <p class="mt-3">4. 어떠한 형태의 광고/거래/판매/구매 또는 서비스 제공에 참여하지 마십시오.</p>
+
+                    <p class="mt-3">5. URL 단축기를 사용하지 마십시오. 항상 원본 링크를 제출하십시오.</p>
+
+                    <p class="mt-3">6. 지정된 언어 대화방을 이용하세요..</p>
+
+                    <p class="mt-3">전체 규칙 목록은 포럼에서 찾을 수 있습니다.</p>
+                </div>
+
+
+                   
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- 공통 모달 영역 : E -->
+
