경로수정, 입금모달 진행중

--- a/_footer.html
+++ b/_footer.html
@@ -67,25 +67,25 @@
                 <p class="text-tit text-lg font-medium w-full text-center lg:text-left">커뮤니티 가입하기</p>
                 <div class="flex flex-wrap gap-3 w-full lg:w-36 justify-center lg:justify-start">
                     <a class="telegram" href="javascript:;" target="_blank">
-                        <img class="w-10" src="./dist/custom_img/sns/share_7.webp" alt="telegram">
+                        <img class="w-10" src="/bcGame/dist/custom_img/sns/share_7.webp" alt="telegram">
                     </a>
                     <a class="github" href="javascript:;" target="_blank">
-                        <img class="w-10" src="./dist/custom_img/sns/share_5.webp" alt="github">
+                        <img class="w-10" src="/bcGame/dist/custom_img/sns/share_5.webp" alt="github">
                     </a>
                     <a class="twitter" href="javascript:;" target="_blank">
-                        <img class="w-10" src="./dist/custom_img/sns/share_8.webp" alt="twitter">
+                        <img class="w-10" src="/bcGame/dist/custom_img/sns/share_8.webp" alt="twitter">
                     </a>
                     <a class="facebook" href="javascript:;" target="_blank">
-                        <img class="w-10" src="./dist/custom_img/sns/share_3.webp" alt="facebook">
+                        <img class="w-10" src="/bcGame/dist/custom_img/sns/share_3.webp" alt="facebook">
                     </a>
                     <a class="discord" href="javascript:;" target="_blank">
-                        <img class="w-10" src="./dist/custom_img/sns/share_2.webp" alt="discord">
+                        <img class="w-10" src="/bcGame/dist/custom_img/sns/share_2.webp" alt="discord">
                     </a>
                     <a class="bitcoin" href="javascript:;" target="_blank">
-                        <img class="w-10" src="./dist/custom_img/sns/share_1.webp" alt="bitcoin">
+                        <img class="w-10" src="/bcGame/dist/custom_img/sns/share_1.webp" alt="bitcoin">
                     </a>
                     <a class="instagram" href="javascript:;" target="_blank">
-                        <img class="w-10" src="./dist/custom_img/sns/share_6.webp" alt="instagram">
+                        <img class="w-10" src="/bcGame/dist/custom_img/sns/share_6.webp" alt="instagram">
                     </a>
                 </div>
             </li>
@@ -350,28 +350,28 @@
         <div class="py-10 border-b border-slate-300 border-solid">
             <p class="text-tit text-lg font-medium w-full text-center lg:text-left">후원 및 게임 책임</p>
             <ul class="flex items-center justify-between flex-wrap gap-4 mt-4">
-                <li><a href="https://sigmaawards.org/" target="_blank"><img class="h-14 lg:h-16" src="./dist/custom_img/footer/sigma.webp" alt=""></a></li>
-                <li><a href="https://cloud9.gg/" target="_blank"><img class="h-14 lg:h-16" src="./dist/custom_img/footer/cloudnine.webp" alt=""></a></li>
-                <li><a href="https://www.afa.com.ar/es/" target="_blank"><img class="h-14 lg:h-16" src="./dist/custom_img/footer/afa.webp" alt=""></a></li>
-                <li><a href="https://cryptogambling.org/" target="_blank"><img class="h-14 lg:h-16" src="./dist/custom_img/footer/verify.webp" alt=""></a></li>
-                <li><a href="https://www.itechlabs.com/certificates/BCGame/RNG_Certificate_UK_BCGame_ITL2002455_12Oct20.pdf" target="_blank"><img class="h-14 lg:h-16" src="./dist/custom_img/footer/itech.webp" alt=""></a></li>
-                <li><a href="https://www.responsiblegambling.org/" target="_blank"><img class="h-14 lg:h-16" src="./dist/custom_img/footer/respon.webp" alt=""></a></li>
+                <li><a href="https://sigmaawards.org/" target="_blank"><img class="h-14 lg:h-16" src="/bcGame/dist/custom_img/footer/sigma.webp" alt=""></a></li>
+                <li><a href="https://cloud9.gg/" target="_blank"><img class="h-14 lg:h-16" src="/bcGame/dist/custom_img/footer/cloudnine.webp" alt=""></a></li>
+                <li><a href="https://www.afa.com.ar/es/" target="_blank"><img class="h-14 lg:h-16" src="/bcGame/dist/custom_img/footer/afa.webp" alt=""></a></li>
+                <li><a href="https://cryptogambling.org/" target="_blank"><img class="h-14 lg:h-16" src="/bcGame/dist/custom_img/footer/verify.webp" alt=""></a></li>
+                <li><a href="https://www.itechlabs.com/certificates/BCGame/RNG_Certificate_UK_BCGame_ITL2002455_12Oct20.pdf" target="_blank"><img class="h-14 lg:h-16" src="/bcGame/dist/custom_img/footer/itech.webp" alt=""></a></li>
+                <li><a href="https://www.responsiblegambling.org/" target="_blank"><img class="h-14 lg:h-16" src="/bcGame/dist/custom_img/footer/respon.webp" alt=""></a></li>
             </ul>
             <ul class="flex justify-center gap-4 mt-4">
-                <li><a href="javascript:;" target="_blank"><img class="h-14 lg:h-16" src="./dist/custom_img/footer/eighteen.webp" alt=""></a></li>
+                <li><a href="javascript:;" target="_blank"><img class="h-14 lg:h-16" src="/bcGame/dist/custom_img/footer/eighteen.webp" alt=""></a></li>
             </ul>
         </div>
         <div class="py-10">
             <ul class="lg:flex gap-10 font-medium">
                 <li class="w-full lg:w-1/2 text-center lg:text-left">
-                    <img class="h-10 mx-auto lg:mx-0" src="./dist/custom_img/footer/logo_pure.webp" alt="">
+                    <img class="h-10 mx-auto lg:mx-0" src="/bcGame/dist/custom_img/footer/logo_pure.webp" alt="">
                     <p class="mt-6 text-xs">
                         BC.GAME 은 플레이어에게 최고의 온라인 카지노 경험을 제공하는 커뮤니티 기반 암호화폐 카지노입니다! BC.GAME에서 우리는 블록체인이 온라인 암호화 도박 산업을 영원히 바꿀 것이라고 확신합니다! 직접 눈으로 확인해보세요! 그리고 암호화폐를 획득하세요!
                     </p>
                 </li>
                 <li class="w-full lg:w-1/2 text-center lg:text-left mt-6 lg:mt-0 ">
                     <div class="lg:flex gap-2 items-center">
-                        <img class="h-14 mx-auto lg:mx-0" src="./dist/custom_img/footer/license.webp" alt="">
+                        <img class="h-14 mx-auto lg:mx-0" src="/bcGame/dist/custom_img/footer/license.webp" alt="">
                         <p class="text-xs mt-4 lg:mt-0">
                             BC.GAME 은 마스터 게임 라이선스 #5536/JAZ에 따라 하위 라이선스 CIL에 따라 BlockDance B.V.(Curaçao 상업 등록 번호 158182, Emancipatie Boulevard Dominico F. DonMartina 31, Curaçao)에서 운영합니다.
                         </p>
