우측영역 모달 추가완료, 스폰서쉽 페이지 완료

--- a/_left_menu.html
+++ b/_left_menu.html
@@ -7,7 +7,7 @@
         <button class="fold_btn rounded p-3.5 bg-back">
             <svg class="w-4 h-4 fill-basic"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Tighten"></use></svg>
         </button>
-        <a href="javascript:;" class="top_logo"><img alt="logo" class="h-10" src="/bcGame/dist/custom_img/logo.webp"></a>
+        <a href="/bcGame/index.html" class="top_logo"><img alt="logo" class="h-10" src="/bcGame/dist/custom_img/logo.webp"></a>
     </div>
         
     <div class="menu_box px-3 py-6 text-basic">
@@ -496,25 +496,25 @@
                 </div>
                 <div class="hidden menu_depth p-2">
                     <div class="menu_list bg-back">
-                        <a href="javascript:;" class="flex items-center gap-5 h-full pl-4">
+                        <a href="/bcGame/sponsorship_afa.html" class="flex items-center gap-5 h-full pl-4">
                             <svg class="w-5 h-5 fill-basic"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_AFA"></use></svg>
                             <span class="font-medium">AFA</span>
                         </a>
                     </div>
                     <div class="menu_list bg-back">
-                        <a href="javascript:;" class="flex items-center gap-5 h-full pl-4">
+                        <a href="/bcGame/sponsorship_cloud9.html" class="flex items-center gap-5 h-full pl-4">
                             <svg class="w-5 h-5 fill-basic"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Cloud9"></use></svg>
                             <span class="font-medium">Cloud9</span>
                         </a>
                     </div>
                     <div class="menu_list bg-back">
-                        <a href="javascript:;" class="flex items-center gap-5 h-full pl-4">
+                        <a href="/bcGame/sponsorship_dl.html" class="flex items-center gap-5 h-full pl-4">
                             <svg class="w-5 h-5 fill-basic"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Dl"></use></svg>
                             <span class="font-medium">데이비드 루이즈</span>
                         </a>
                     </div>
                     <div class="menu_list bg-back">
-                        <a href="javascript:;" class="flex items-center gap-5 h-full pl-4">
+                        <a href="/bcGame/sponsorship_suniel.html" class="flex items-center gap-5 h-full pl-4">
                             <svg class="w-5 h-5 fill-basic"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_SunielShetty"></use></svg>
                             <span class="font-medium">수니엘 셰티</span>
                         </a>
