--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>BC.GAME</title>
     <!-- ** css 시작 ** -->
     <link rel="stylesheet" href="/bcGame/dist/css/app.css" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
 
     <!-- 커스텀 css 추가 -->
     <link rel="stylesheet" href="/bcGame/dist/custom_css/custom.css" />
@@ -52,8 +52,45 @@
             <!-- ** 내용시작 ** -->
             <div class="container_wrap" style="height:1000px;">
 
+                <div class="main_visual">
+                    <div class="container">
+                        <div class="relative flex flex-col md:flex-row items-center justify-end ">
+                            <img class="visual_img" src="/bcGame/dist/custom_img/main/main_visual.png" alt="">
+                            <div class="text_box relative md:absolute left-0 top-0 md:top-16 text-tit text-center md:text-left pb-5 md:pb-0">
+                                <p class="text-tit text-lg">가입 및 받기</p>
+                                <h4 class="py-2 md:py-4 text-3xl md:text-6xl font-extrabold">까지 <span class="text-green-gradient">₩ 26,000,000</span></h4>
+                                <div class="flex items-center flex-col md:flex-row gap-1">
+                                    <button class="btn btn-purple h-12 w-36 font-semibold">즉시 가입</button>
+                                    <span class="px-2 text-basic text-base">or</span>
+                                    <div class="flex items-center gap-1">
+                                        <button class="join_other"><svg width="10" height="11" viewBox="0 0 10 11" xmlns="http://www.w3.org/2000/svg"><path d="M6.8619 3.38909C6.37169 2.93243 5.70412 2.67872 5.02615 2.68886C3.77446 2.68886 2.72093 3.50068 2.33502 4.60677L0.749573 3.40937C1.56315 1.83647 3.21119 0.841974 5.02615 0.841974C6.21523 0.831834 7.36257 1.25803 8.22834 2.04957L6.8619 3.38909Z"></path><path d="M2.3347 6.39258C2.13649 5.81418 2.13665 5.18503 2.33485 4.60658L0.749407 3.40918C0.0713866 4.72837 0.0712314 6.28098 0.749252 7.59003C1.56283 9.16293 3.21103 10.1574 5.02598 10.1574C6.3159 10.1574 7.39831 9.74346 8.19046 9.03657L8.19682 9.04135C9.10425 8.21928 9.62582 7.02188 9.62582 5.61133C9.62582 5.29678 9.59451 4.97204 9.54236 4.66763H5.02588V6.46376H7.61271C7.5084 7.04221 7.1643 7.54952 6.65329 7.87426C6.22567 8.15839 5.67265 8.32053 5.02598 8.32053C3.7743 8.32053 2.72076 7.49867 2.33485 6.40272L0.751787 7.58806L2.3347 6.39258Z"></path></svg></button>
+                                        <button class="join_other"><svg width="10" height="9" viewBox="0 0 10 9" xmlns="http://www.w3.org/2000/svg" class="tel"><path d="M0.631267 4.23359L8.94963 0.522088C9.26472 0.381636 9.63257 0.52552 9.77174 0.843552C9.82141 0.956236 9.83693 1.08093 9.81624 1.20277L8.70026 7.90193C8.63145 8.31346 8.24549 8.59114 7.83779 8.52187C7.7219 8.50206 7.6117 8.45479 7.51702 8.38397L4.70353 6.27916C4.42674 6.07231 4.36827 5.6781 4.57367 5.39854C4.59695 5.36641 4.62386 5.33651 4.65335 5.30942L7.47408 2.69548C7.49943 2.67187 7.50098 2.6322 7.4777 2.6064C7.45752 2.58436 7.42441 2.57962 7.39854 2.59569L3.11829 5.27286C2.96256 5.36984 2.77269 5.39345 2.59885 5.33677L0.655584 4.70362C0.52417 4.66082 0.452255 4.51881 0.49468 4.38657C0.51641 4.31856 0.566078 4.2625 0.631267 4.23354V4.23359Z"></path></svg></button>
+                                        <button class="join_other"><svg width="12" height="12" viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="m.6 1 .1.1 3.6 1.4h3.2l3.6-1.4.1-.1.8 1.8-.4 1.9.2.2-.3.3.3.2-.3.3.2.1-.6.8.8 2.5-.8 2.5-2.7-.7-.5.4-1 .7H5.1l-1-.7-.4-.3-.1-.1-2.6.7-.9-2.5.8-2.5-.5-.7.2-.1-.4-.4.2-.2-.2-.3.2-.2L0 2.8.6 1zm3.1 2.5 1 .8-.4.4-1 .9-2.2.6-.4-.5.2-.1-.3-.4.2-.2-.3-.2.2-.2-.3-1.7.5-1.5 2.8 2.1zm7.1 2.7.4-.5-.2-.1.3-.3-.2-.2.3-.2-.1-.3.3-1.7-.5-1.5-3.9 2.9.6.5.9.8 2.1.6zM5.3 8.6l-.5-1.2-1.3.6 1.8.6zM5.2 10l-.2.1-.1 1.1H7l.1.1-.1-1.1-.3-.2H5.2zm3.3-2-1.8.5.5-1.1 1.3.6z"></path></svg></button>
+                                        <button class="join_other"><svg width="13" height="9" viewBox="0 0 13 9" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M11.4289 3.91921L12.1201 4.58746C12.2153 4.67825 12.2153 4.82718 12.1201 4.91797L9.00652 7.93605C8.91132 8.02685 8.75766 8.02685 8.66608 7.93605L6.45637 5.79324C6.43412 5.77145 6.39429 5.77145 6.37204 5.79324L4.16233 7.93605C4.06713 8.02685 3.91347 8.02685 3.82189 7.93605L0.697462 4.91797C0.602265 4.82718 0.602265 4.67825 0.697462 4.58746L1.38868 3.91921C1.48387 3.82842 1.63753 3.82842 1.72911 3.91921L3.93882 6.06203C3.96107 6.08381 4.00142 6.08381 4.02315 6.06203L6.23287 3.91921C6.32806 3.82842 6.48172 3.82842 6.5733 3.91921L8.78353 6.06203C8.80526 6.08381 8.84561 6.08381 8.86734 6.06203L11.0776 3.91921C11.18 3.82842 11.3337 3.82842 11.4289 3.91921ZM2.9949 2.36498C4.87918 0.53817 7.93791 0.53817 9.82219 2.36498L10.0493 2.58655C10.144 2.67735 10.144 2.82627 10.0493 2.91707L9.27326 3.66883C9.22566 3.71605 9.14909 3.71605 9.10149 3.66883L8.79054 3.36739C7.47331 2.09261 5.34379 2.09261 4.02655 3.36739L3.69388 3.69062C3.64628 3.73783 3.56919 3.73783 3.52159 3.69062L2.74604 2.93885C2.65085 2.84806 2.65085 2.69913 2.74604 2.60834L2.9949 2.36498Z"></path></svg></button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="slide_wrap relative ">
+                            <div class="slide_box overflow-hidden">
+                                <ul class="swiper-wrapper">
+                                    <li class="swiper-slide"><img src="/bcGame/dist/custom_img/main/main_visual1.avif" alt=""></li>
+                                    <li class="swiper-slide"><img src="/bcGame/dist/custom_img/main/main_visual2.avif" alt=""></li>
+                                    <li class="swiper-slide"><img src="/bcGame/dist/custom_img/main/main_visual3.avif" alt=""></li>
+                                    <li class="swiper-slide"><img src="/bcGame/dist/custom_img/main/main_visual4.avif" alt=""></li>
+                                    <li class="swiper-slide"><img src="/bcGame/dist/custom_img/main/main_visual5.avif" alt=""></li>
+                                </ul>
+                                <div class="swiper-pagination"></div>
+                                <div class="swiper-button-next rounded"><svg class="w-3 h-3 fill-basic"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Arrow"></use></svg></div>
+                                <div class="swiper-button-prev rounded"><svg class="w-3 h-3 fill-basic rotate-180"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Arrow"></use></svg></div>
+                            </div>
+                            
+                        </div>
+                    </div>
+                </div>
+                <div class="py-10"></div>
 
-                 <!-- BEGIN: Custom Tooltip Toggle --> 
+
                 
                 <!-- ** 푸터 시작 ** -->
                 <!-- ** 푸터 끝 ** -->
@@ -78,10 +115,38 @@
     src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
     <script src="/bcGame/dist/custom_js/custom.js"></script>
     <script src="/bcGame/dist/js/app.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
     <!-- 필수 jquery library -->
     <script src="/bcGame/dist/js/jquery-1.12.4.js"></script>
     <script src="/bcGame/dist/js/jquery-ui.js"></script>
+
+    <script>
+        var swiper = new Swiper(".main_visual .slide_box", {
+            loop:true,
+            slidesPerView: 1,
+            slidesPerGroup: 1,
+            spaceBetween: 10,
+            autoplay: {
+                delay: 4000,
+                disableOnInteraction: false,
+            },
+            navigation: {
+                nextEl: ".swiper-button-next",
+                prevEl: ".swiper-button-prev",
+            },
+            pagination: {
+                el: ".swiper-pagination",
+                clickable: true,
+            },
+            breakpoints: {
+                768: {
+                    slidesPerView: 3,
+                    spaceBetween: 10,
+                    slidesPerGroup: 3,
+                },
+            }
+        });
+      </script>
 
 
 
