카지노 - 당신을 위해 선택, 가장좋아하는,최근 완료, 메인/슬롯 진행중

--- a/_left_menu.html
+++ b/_left_menu.html
@@ -52,7 +52,7 @@
             <div class="menu_wrap">
                 <!-- <div class="menu_list bg-back rounded flex items-center justify-between cursor-pointer active"> -->
                 <div class="menu_list bg-back rounded flex items-center justify-between cursor-pointer">
-                    <a href="javascript:;" class="flex items-center gap-5 h-full pl-4">
+                    <a href="/bcGame/casino/index.html" class="flex items-center gap-5 h-full pl-4">
                         <svg class="w-5 h-5 fill-basic"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Casino"></use></svg>
                         <span class="font-medium">카지노</span>
                     </a>
@@ -61,19 +61,19 @@
                 <div class="hidden menu_depth p-2">
                     <!-- <div class="menu_list bg-back active"> -->
                     <div class="menu_list bg-back">
-                        <a href="javascript:;" class="flex items-center gap-5 h-full pl-4">
+                        <a href="/bcGame/casino/picks_for_you.html" class="flex items-center gap-5 h-full pl-4">
                             <svg class="w-5 h-5 fill-basic"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_PicksForYou"></use></svg>
                             <span class="font-medium">당신을 위해 선택</span>
                         </a>
                     </div>
                     <div class="menu_list bg-back">
-                        <a href="javascript:;" class="flex items-center gap-5 h-full pl-4">
+                        <a href="/bcGame/casino/favorite.html" class="flex items-center gap-5 h-full pl-4">
                             <svg class="w-5 h-5 fill-basic"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Favorites"></use></svg>
                             <span class="font-medium">가장 좋아하는</span>
                         </a>
                     </div>
                     <div class="menu_list bg-back">
-                        <a href="javascript:;" class="flex items-center gap-5 h-full pl-4">
+                        <a href="/bcGame/casino/recent.html" class="flex items-center gap-5 h-full pl-4">
                             <svg class="w-5 h-5 fill-basic"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Recent"></use></svg>
                             <span class="font-medium">최근</span>
                         </a>
