--- a/index.html
+++ b/index.html
@@ -74,17 +74,16 @@
                         <div class="slide_wrap relative ">
                             <div class="slide_box overflow-hidden">
                                 <ul class="swiper-wrapper">
-                                    <li class="swiper-slide"><img src="/bcGame/dist/custom_img/main/main_visual1.avif" alt=""></li>
-                                    <li class="swiper-slide"><img src="/bcGame/dist/custom_img/main/main_visual2.avif" alt=""></li>
-                                    <li class="swiper-slide"><img src="/bcGame/dist/custom_img/main/main_visual3.avif" alt=""></li>
-                                    <li class="swiper-slide"><img src="/bcGame/dist/custom_img/main/main_visual4.avif" alt=""></li>
-                                    <li class="swiper-slide"><img src="/bcGame/dist/custom_img/main/main_visual5.avif" alt=""></li>
+                                    <li class="swiper-slide"><a href="javascript:;" class="hover:opacity-80"><img src="/bcGame/dist/custom_img/main/main_visual1.avif" alt=""></a></li>
+                                    <li class="swiper-slide"><a href="javascript:;" class="hover:opacity-80"><img src="/bcGame/dist/custom_img/main/main_visual2.avif" alt=""></a></li>
+                                    <li class="swiper-slide"><a href="javascript:;" class="hover:opacity-80"><img src="/bcGame/dist/custom_img/main/main_visual3.avif" alt=""></a></li>
+                                    <li class="swiper-slide"><a href="javascript:;" class="hover:opacity-80"><img src="/bcGame/dist/custom_img/main/main_visual4.avif" alt=""></a></li>
+                                    <li class="swiper-slide"><a href="javascript:;" class="hover:opacity-80"><img src="/bcGame/dist/custom_img/main/main_visual5.avif" alt=""></a></li>
                                 </ul>
                                 <div class="swiper-pagination"></div>
                                 <div class="swiper-button-next rounded"><svg class="w-3 h-3 fill-basic"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Arrow"></use></svg></div>
                                 <div class="swiper-button-prev rounded"><svg class="w-3 h-3 fill-basic rotate-180"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Arrow"></use></svg></div>
                             </div>
-                            
                         </div>
                     </div>
                 </div>
